# atomic

./: .gitignore  Cargo.toml  LICENSE  README.md  autonomous_checklist.md  autonomous_ledger.md  autonomous_next_steps.md  autonomous_plan.md  autonomous_progress.md  autonomy_architecture.md  demo_lane_checklist.md  demo_lane_plan.md  demo_lane_progress.md  grammar_abalation_checklist.md  grammar_ablation_findings.md  grammar_ablation_gap.md  grammar_ablation_next_steps.md  grammar_ablation_progress.md  mechanization_plan.md  overall_plan.md  plan_progress.md  problem_statement.md  pseudo_code.md  pseudocode.md  quantum_improvement_plan.md  quantum_progress.md  rust-toolchain.toml
.cargo/: config.toml
agda/: AbstractionBarrier.agda  BridgePayload.agda  Prelude.agda  README.md  StepWitness.agda
configs/: cpu_only.toml  debug.toml  default.toml  demo_breadth_shadow_10m.toml  demo_breadth_shadow_15m.toml  demo_breadth_shadow_5m.toml  desktop_16gb.toml  desktop_claim_shadow_10h.toml  desktop_claim_shadow_1h.toml  desktop_claim_shadow_smoke.toml  grammar_ablation_baseline.toml  relaxed_shadow.toml  strict_canon_guarded.toml
crates/pen-accel/: Cargo.toml
crates/pen-agda/: Cargo.toml
crates/pen-agda/src/: export.rs  lib.rs  manifest.rs  render.rs  verify.rs
crates/pen-cli/: Cargo.toml  build.rs
crates/pen-cli/src/: claim_evidence.rs  cli.rs  cmd_benchmark_claim_lane.rs  cmd_certify_claim_lane.rs  cmd_compare_claim_lane.rs  cmd_export_agda.rs  cmd_inspect.rs  cmd_resume.rs  cmd_run.rs  human.rs  main.rs  narrative.rs  output.rs  progress.rs  report.rs
crates/pen-core/: Cargo.toml
crates/pen-eval/: Cargo.toml
crates/pen-search/: Cargo.toml
crates/pen-search/src/: accept.rs  bounds.rs  branch_bound.rs  config.rs  dedupe.rs  diversify.rs  engine.rs  engine_claim_replay.rs  enumerate.rs  expand.rs  frontier.rs  lib.rs  motif.rs  narrative.rs  prefix_cache.rs  prefix_memo.rs  priority.rs  resume.rs  scheduler.rs  state.rs  worker.rs
crates/pen-store/: Cargo.toml
crates/pen-store/src/: blob.rs  checkpoint.rs  checksum.rs  frontier.rs  layout.rs  lib.rs  manifest.rs  memory.rs  migrate.rs  queue.rs  shard.rs  spill.rs  sqlite.rs  telemetry.rs
crates/pen-type/: Cargo.toml
docs/: AGDA_SIDECAR.md  ARCHITECTURE.md  CHECKPOINTS.md  DONOR_MAP.md  FRONTIER_STATE_V1.md  MEMORY_MODEL.md  SEARCH_CONTRACT.md
runs/codex-claim-release-full-aggregation-open-band-clause-accept-rank-facts-long-rerun-v13/: claim-compare.json  claim-compare.txt  claim_benchmark.json  claim_benchmark.txt  claim_certificate.json  claim_certificate.txt  config.toml  meta.sqlite3  run.json  telemetry.ndjson
runs/codex-claim-release-full-aggregation-open-band-clause-accept-rank-facts-long-rerun-v4/: meta.sqlite3  run.json  telemetry.ndjson
runs/codex-claim-release-full-aggregation-open-band-clause-accept-rank-facts-long-rerun-v6/: claim-compare.json  claim-compare.txt  claim_benchmark.json  claim_benchmark.txt  claim_certificate.json  claim_certificate.txt  meta.sqlite3  run.json  telemetry.ndjson
runs/codex-claim-release-full-aggregation-open-band-rank-scan-v1/: run.json  telemetry.ndjson
runs/codex-claim-release-full-aggregation-open-band-stage-timing-v1/: config.toml  run.json  telemetry.ndjson
runs/codex-claim-release-full-primary-rank-v1/: run.json  telemetry.ndjson
runs/codex-claim-release-step4-kernel-admitted-kernel-v1/: run.json  telemetry.ndjson
runs/codex-claim-release-step4-kernel-bound-bookkeeping-v1/: run.json  telemetry.ndjson
runs/codex-claim-release-step4-kernel-connectivity-v3/: run.json  telemetry.ndjson
runs/codex-claim-release-step4-kernel-reopened-connectivity-v1/: meta.sqlite3  (+2 more)
schemas/: frontier_manifest_v1.schema.json  run_manifest_v1.schema.json  step_checkpoint_v1.schema.json  telemetry_event_v1.schema.json
scripts/: benchmark_claim_lane.py  certify_claim_lane.py  compare_runs.py
tex/: DCT.tex  algorithmic_big_bang.aux  algorithmic_big_bang.out  algorithmic_big_bang.tex  automated_theory_synthesis_jar_draft.tex  computational_problem_statement.md  constructive_idealism.aux  constructive_idealism.out  constructive_idealism.tex  constructive_idealism.toc  constructive_idealism_rewrite.aux  constructive_idealism_rewrite.out  constructive_idealism_rewrite.tex  constructive_idealism_rewrite.toc  genesis_sequence.tex  pen_jar_draft.tex  pen_paper.aux  pen_paper.out  pen_paper.tex  pen_paper.toc  predictions.md  quantum_compution.md
xtask/: Cargo.toml
xtask/src/: main.rs
(+761 files in other folders)
