[workspace]
members = [
    "crates/pen-core",
    "crates/pen-type",
    "crates/pen-eval",
    "crates/pen-store",
    "crates/pen-search",
    "crates/pen-accel",
    "crates/pen-agda",
    "crates/pen-cli",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0.100"
blake3 = "1.8.2"
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
schemars = { version = "1.0.4", features = ["derive"] }
thiserror = "2.0.16"
toml = "0.8.23"
time = { version = "0.3.44", features = ["formatting"] }
sha2 = "0.10.9"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "debuginfo"

[profile.dev]
debug = 1
