[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
pen-agda = { path = "../crates/pen-agda" }
pen-core = { path = "../crates/pen-core" }
pen-eval = { path = "../crates/pen-eval" }
pen-search = { path = "../crates/pen-search" }
pen-store = { path = "../crates/pen-store" }
schemars.workspace = true
serde_json.workspace = true
toml.workspace = true
