[package]
name = "pen-agda"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
pen-core = { path = "../pen-core" }
pen-eval = { path = "../pen-eval" }
pen-store = { path = "../pen-store" }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
