[package]
name = "pen-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
pen-accel = { path = "../pen-accel" }
pen-agda = { path = "../pen-agda" }
pen-core = { path = "../pen-core" }
pen-eval = { path = "../pen-eval" }
pen-search = { path = "../pen-search" }
pen-store = { path = "../pen-store" }
pen-type = { path = "../pen-type" }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
sha2.workspace = true
sysinfo = "0.35.2"

[dev-dependencies]
fs2 = "0.4.3"

[[test]]
name = "atomic_bootstrap"
path = "../../tests/integration/atomic_bootstrap.rs"

[[test]]
name = "resume_roundtrip"
path = "../../tests/integration/resume_roundtrip.rs"

[[test]]
name = "deterministic_replay"
path = "../../tests/integration/deterministic_replay.rs"

[[test]]
name = "agda_export"
path = "../../tests/integration/agda_export.rs"
