[package]
name = "pen-store"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
pen-core = { path = "../pen-core" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
